OO-5789: Add max score to course assessment user data model